tests/errors/non_default_after_default.py
# expect_error: non-default argument follows default argument
def bad(a=1, b):
    return a + b